# panic

./: .travis.yml  CMakeLists.txt  README.md  clib.json  package.json
examples/: build.cmake  main.c
sources/: build.cmake  panic.c  panic.h
tests/unit/: build.cmake  describe.c  features.c  features.h  fixtures.c  fixtures.h
